<resources>
    <string name="app_name">FreeVices - Control of vices</string>
    <string name="about_title">About us</string>
    <string name="main_activity_title">Home</string>
    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_overview">Overview</string>
    <string name="app_name_short" translatable="false">FreeVices</string>
    <string name="header_text">Transforming your life without vices.</string>
    <string name="fab_content_desc">Floating Action Button: Add Items</string>
    <string name="tobacco">Tobacco</string>
    <string name="alcohol">Alcohol</string>
    <string name="parties">Parties</string>
    <string name="others">Others</string>
    <string name="add">Add</string>
    <string name="add_habit">Add habit</string>
    <string name="clp_sign" translatable="false">$</string>
    <string name="how_many">How many money as expended</string>
    <string name="added_text">Successfully added</string>
    <string name="login_activity_title">Login or Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="welcome">Welcome back: %s</string>
    <string name="phone_optional">Phone (Optional)</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm</string>
    <string name="username">Username</string>
    <string name="register_email">Email Address</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="tobacco_value">Tobacco: $%d</string>
    <string name="parties_value">Parties: $%d</string>
    <string name="alcohol_value">Alcohol: $%d</string>
    <string name="others_value">Others: $%d</string>
    <string name="total_value">Total (Monthly): $%d</string>
    <string name="total_value_ov">Totals (Monthly): %d</string>
    <string name="error">Error</string>
    <string name="error_user_already_exists">User already exists</string>
    <string name="error_invalid_email">Invalid Email Address</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="personal">Personal</string>
    <string name="app_settings">App Settings</string>
    <string name="history_settings">History Settings</string>
    <string name="settings">Settings</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="title_appearance">Appearance</string>
    <string name="title_enable_notifications">Notifications</string>
    <string name="title_reset_notifications">Reset Notifications</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="title_update_name">Update Name</string>
    <string name="settings_update_name">Update Display Name</string>
    <string name="title_update_username">Update Username</string>
    <string name="settings_update_username">Update Username</string>
    <string name="title_update_email">Update Email</string>
    <string name="settings_update_email">Update Email Address \nRequires a valid email</string>
    <string name="account_settings">Account Settings</string>
    <string name="title_change_password">Update Password</string>
    <string name="settings_change_password">Change Password \nRequires enter current password</string>
    <string name="title_delete_account">Delete Account</string>
    <string name="setting_delete_account">Delete Account and all its data</string>
    <string name="settings_reset_notifications">If notifications are not working, reset here</string>
    <string name="setting_allow_notifications">Enable notifications remembering add data, or receive relevant info</string>
    <string name="settings_dark_theme">Sets dark or light theme</string>
    <string name="about">About us</string>
    <string name="logout">Sign out</string>
    <string name="delete_last_30_days">Delete Last 30 Days</string>
    <string name="delete_last_60_days">Delete Last 60 Days</string>
    <string name="delete_last_90_days">Delete Last 90 Days</string>
    <string name="delete_all">Delete All History</string>
    <string name="error_user_not_found">Invalid user or not found</string>
    <string name="error_invalid_token">Invalid Auth Token</string>
    <string name="error_unknown">Unknown error</string>
    <string name="loading">Loading…</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login_or_register">Login or Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="delete_last_30_days_dialog">Delete Last 30 Days</string>
    <string name="data_updated_successfully">Data updated successfully</string>
    <string name="error_updating_data">Error updating data</string>
    <string name="data_added_successfully">Data added successfully</string>
    <string name="error_adding_data">Error adding data</string>
    <string name="email_updated_successfully">Email updated successfully</string>
    <string name="error_updating_email">Error updating email: %1$s</string>
    <string name="error_deleting_data">Error deleting data: %1$s</string>
    <string name="data_deleted">Data deleted</string>
    <string name="fcm_permission_denied">Notifications is disabled for the app</string>
    <string name="about_notifications">About notifications</string>
    <string name="about_notifications_message">Notifications are a great way to keep track of your expenses, since we will remind you to add it, you can not accept it, and you will have to add the data manually when you enter the App. Or you can activate the permission, and we will send a notification to remind you.</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="expenses_in_the_current_month">Expenses in the current month</string>
    <string name="total">Total</string>
    <string name="enter_password">Enter password</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_spending_in_the_last_week_is">Your spending in the last week is:\n$%1$s</string>
    <string name="your_spending_in_the_last_2_weeks_is">Your spending in the last 2 weeks is:\n$%1$s</string>
    <string name="your_spending_in_the_last_month_is">Your spending in the last month is:\n\n$%1$s</string>
    <string name="this_could_be_savings_for_your_vacation_or_to_fulfill_that_dream_you_have_pending">" This could be savings for your vacation or to fulfill that dream you have pending. "</string>
    <string name="close">Close</string>
    <string name="add_expense_button">Add expense button</string>
    <string name="expended_in_category">Expended in %1$s</string>
    <string name="title_activity_new_main" translatable="false">NewMainActivity</string>
    <string name="week_spend">Spend this Week: $%1$d</string>
    <string name="register_on_freevices">Register on FreeVices</string>
    <string name="fill_all_the_fields">Fill all the fields</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
    <string name="your_total_expense_in_the_last_days_is">Your total expense in the last %1$s days is: \n\n $%2$s</string>
    <string name="tobacco_expense">\nTobacco Expense: \n\n $%1$s \n</string>
    <string name="alcohol_expense">\nAlcohol Expense: \n\n $%1$s \n</string>
    <string name="parties_expense">\nParties Expense: \n\n $%1$s \n</string>
    <string name="others_expense">\nOthers Expense: \n\n $%1$s \n</string>
    <string name="user_settings">User Settings</string>
    <string name="change_display_name">Change Display Name</string>
    <string name="change_your_display_name">Change your display name</string>
    <string name="change_password">Change Password</string>
    <string name="require_your_current_password">Require your current password</string>
    <string name="change_email_address">Change Email Address</string>
    <string name="update_your_email_address_require_your_current_password">Update your email address \nRequire your current password</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_your_account_and_all_associated_data_this_cannot_be_undone">Delete your account and all associated data \nThis cannot be undone</string>
    <string name="user_settings_help">On this screen you can modify your account settings, such as your name, your password, your email, or delete your account if you wish.</string>
    <string name="help">Help</string>
    <string name="confirm">Confirm</string>
    <string name="new_display_name">New Display Name</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="error_updating_password">"Error updating password: %1$s"</string>
    <string name="email_changed_successfully">Email changed successfully</string>
    <string name="new_email">New email</string>
    <string name="delete_account_warning">Are you sure you want to delete your account and all its associated data?\nThis action is irreversible</string>
    <string name="delete">Delete</string>
    <string name="account_deleted">Account deleted successfully</string>
    <string name="error_deleting_account">Error deleting account: %1$s</string>
    <string name="history_settings_help">Here you can manage your history, delete the last 30, 60, 120 and 180 days. As well as all the history we have.\nThis action is irreversible.</string>
    <string name="clear_last_30_days">Clear last 30 days</string>
    <string name="delete_last_30_days_from_history_this_action_cannot_be_undone">Delete last 30 days from history. This action cannot be undone</string>
    <string name="clear_last_60_days">Clear last 60 days</string>
    <string name="delete_last_60_days_from_history_this_action_cannot_be_undone">Delete last 60 days from history. This action cannot be undone</string>
    <string name="clear_last_90_days">Clear last 90 days</string>
    <string name="delete_last_90_days_from_history_this_action_cannot_be_undone">Delete last 90 days from history. This action cannot be undone</string>
    <string name="clear_all_history">Clear all history</string>
    <string name="delete_all_history_this_action_cannot_be_undone">Delete all history. This action cannot be undone</string>
    <string name="delete_history">Delete History</string>
    <string name="delete_history_text">Are you sure you want to delete your history for %1$d days?</string>
    <string name="history_deleted">History deleted for %1$d days.</string>
    <string name="error_deleting_history">Error deleting history: %1$s</string>
    <string name="delete_all_history">Are you sure you want to delete all your history. This action cannot be undone</string>
    <string name="app_settings_help">Here you can modify settings related to the application. As it improves, new settings will be added.</string>
    <string name="write_a_review">Write a review</string>
    <string name="tell_us_what_you_think">Tell us what you think</string>
    <string name="contact_us">Contact Us</string>
    <string name="send_us_an_email">Send us an email</string>
    <string name="error_30_days">A error has occurred getting data for 30 days</string>
    <string name="error_14_days">A error has occurred getting data for 14 days</string>
</resources>