<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/personal_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:enabled="true"
        android:showDividers="middle">
        <Preference
            android:key="update_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="Default value"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/title_update_name"
            android:summary="@string/settings_update_name"/>
        <Preference
            android:key="update_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="Default value"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/title_update_username"
            android:summary="@string/settings_update_username"/>
        <Preference
            android:key="update_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="Default value"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/title_update_email"
            android:summary="@string/settings_update_email"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/account_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:enabled="true"
        android:showDividers="middle">
        <Preference
            android:key="change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/title_change_password"
            android:summary="@string/settings_change_password"/>
        <Preference
            android:key="delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/title_delete_account"
            android:summary="@string/setting_delete_account"/>
    </PreferenceCategory>
</PreferenceScreen>