<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/alcohol"
        android:id="@+id/alcoholMenu"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/tobacco"
        android:id="@+id/tobaccoMenu"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/parties"
        android:id="@+id/partiesMenu"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/others"
        android:id="@+id/othersMenu"/>
</menu>