<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sgtech.freevices.views.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_overview"
            app:destination="@id/nav_overview" />
        <action
            android:id="@+id/action_nav_home_to_nav_history"
            app:destination="@id/nav_history" />
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.sgtech.freevices.views.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_nav_history_to_nav_overview"
            app:destination="@id/nav_overview" />
        <action
            android:id="@+id/action_nav_history_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_overview"
        android:name="com.sgtech.freevices.views.ui.overview.OverviewFragment"
        android:label="@string/menu_overview"
        tools:layout="@layout/fragment_overview" />

    <activity
        android:id="@+id/nav_settings"
        android:name="com.sgtech.freevices.views.SettingsActivity"
        android:label="@string/settings"
        tools:layout="@layout/activity_settings" />
</navigation>