<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/mainGraph"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="96dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tobaccoValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="96dp"
            android:text="@string/tobacco_value"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/mainGraph"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/partiesValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="12dp"
            android:text="@string/parties_value"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/mainGraph"
            app:layout_constraintTop_toBottomOf="@+id/alcoholValueText" />

        <TextView
            android:id="@+id/alcoholValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="12dp"
            android:text="@string/alcohol_value"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/mainGraph"
            app:layout_constraintTop_toBottomOf="@+id/tobaccoValueText" />

        <TextView
            android:id="@+id/otherValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="12dp"
            android:text="@string/others_value"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/mainGraph"
            app:layout_constraintTop_toBottomOf="@+id/partiesValueText" />

        <TextView
            android:id="@+id/totalValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginTop="96dp"
            android:text="@string/total_value"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otherValueText" />

        <!-- Elementos de la sección 1, como gráfico de torta y cuadros de texto -->


        <!-- Cuadros de texto en la sección 2 -->


        <!-- Sección 3 (Textview) -->


        <!-- Textview en la sección 3 -->


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>